# BalanceDNS

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.rust  INSTALL.md  K3S_MANUAL.md  LUA_SANDBOX_MANUAL.md  MANUAL_RU.md  PRODUCTION.md  README.md  RUN_TESTS.md  STABILITY_AUDIT.md  STABILITY_FIXES_SUMMARY.md  SYSTEM_OVERVIEW.md  appveyor.yml  authchain.go  auto_install.sh  balancedns-healthcheck.service  balancedns-healthcheck.timer  balancedns.lua  balancedns.service  balancedns.toml  cache.go  cache_test.go  com.astracat.dns-resolver.plist  config-docker.yaml  config.yaml  cookie.txt  deploy.sh  deploy_k3s.sh  deploy_prod.sh  dns_server.cpp  docker-compose.yml  easy_cluster_deploy.sh  generate-certs.sh  go.mod  (+30 more)
.github/workflows/: ci.yml  deploy.yml  docker-publish.yml  go-ci.yml
.qwen/: settings.json
certs/: openssl.cnf  server.crt  server.key
ci/: before_deploy.sh  script.sh
cmd/astracat-ops/: main.go
cmd/balancedns/: main.go
cmd/dnsserver/: dnsserver.go
cmd/proxy/: main.go
config/: astracat-dns.toml  config.toml
configs/: balancedns.lua  balancedns.yaml  docker.lua  docker.yaml  prod-ru.lua  prod.lua
deploy_pkg/: setup_remote.sh
dnslib/: ._zones.go
docs/: K3S_DEPLOY.md  MANUAL_RU.md  POLICIES_RU.md  admin_manual.md  cluster_manual.md  dnslang_manual.md  user_manual.md
docs/examples/: astracat-prod-dnslang-config.yaml  astracat-prod-dnslang.policy.dns  dnslang.policy.dns
docs/grafana/: astracat_dns_dashboard.json
examples/configs/: production-144.31.151.64.toml
examples/lua/: query_logger.lua
fuzz/: Cargo.toml
fuzz/fuzzers/: dns_normalize.rs  dns_question.rs
go-proxy/: Dockerfile  go.mod  go.sum  main.go
internal/admin/: admin.go
internal/admin/templates/: base.html  dashboard.html  index.html  login.html  plugins.html
internal/app/: server.go
internal/backend/: factory_unbound.go  factory_unbound_enabled.go
internal/cache/: bench_test.go  cache.go  cache_test.go  fast_cache.go  prefetch.go  worker.go
internal/cluster/: sync.go
internal/config/: certs.go  config.go  lua_loader.go  lua_loader_test.go
internal/config/myceeert/: fullchain.pem  privkey.pem
internal/dnslang/: dnslang_test.go  parser.go  runtime.go  types.go
internal/dnsproxy/: options.go  policy.go  policy_security_test.go  proxy.go  proxy_test.go  security.go  security_test.go
internal/dnsutil/: response_writer.go
internal/doh/: server.go
internal/dot/: server.go  server_transport_test.go
internal/filter/: filter.go
internal/hosts/: table.go  table_test.go
internal/interfaces/: resolver.go
internal/knot/: adapter.go  commands.go  config.go
internal/logx/: logger.go
internal/metrics/: metrics.go
internal/odoh/: server.go  server_doh_test.go  server_transport_test.go
internal/plugin/: engine.go  engine_test.go
internal/plugins/: plugins.go
internal/pool/: pool.go
internal/recursor/: dnssec.go  resolver.go  resolver_alias_test.go  resolver_fallback_test.go  resolver_options_test.go  resolver_phase1_test.go  resolver_zonecut_test.go
internal/resolver/: dns_client.go  dnslib_resolver.go  factory.go  godns_resolver.go  net_resolver.go  resolver.go  resolver_test.go  unbound_resolver.go
internal/router/: upstream.go  upstream_test.go
internal/runtime/: supervisor.go  supervisor_test.go
internal/server/: ._server.go  certgen.go  certgen_test.go  circuit_breaker.go  doh.go  dot.go  rate_limiter.go  server.go  server_test.go  upstream.go
internal/tlsutil/: manager.go  manager_test.go  static_repair.go  tlsutil.go
internal/unbound/: resolver.go  resolver_test.go
k8s/: configmap.yaml  deployment.yaml  service.yaml
kubernetes/: configmap.yaml  deployment.yaml
packaging/: astracat-dns.service
plugins/adblock/: adblock.go  adblock_test.go
plugins/adblock-plugin/: Cargo.toml
plugins/anyblock/: anyblock.go  anyblock_test.go
plugins/dnsdistcompat/: dnsdistcompat.go  dnsdistcompat_test.go
plugins/doh/: doh.go
plugins/example_logger/: logger.go
plugins/hosts/: hosts.go
plugins/httpsrr/: httpsrr.go  httpsrr_test.go
plugins/odoh/: odoh.go
plugins/ratelimit/: ratelimit.go
plugins/remote-hosts-plugin/: Cargo.toml
plugins/wasm-remote-hosts-plugin/: Cargo.toml  README.md
scripts/: MONITORING.md  README.md  astracat-fix-tls.sh  autosetup.sh  balancedns-healthcheck.env.example  deploy-safe.sh  deploy.sh  dns_bench.py  fix-config.sh  generate-dev-tls.sh  go_policy_example.go  healthcheck.sh  install-monitor.sh  install-systemd-safe.sh  install-systemd.sh  install-wizard.sh  migrate-from-knot.sh  monitor.sh  policy.lua  status.sh  uninstall-monitor.sh  uninstall-systemd.sh
src/: blocklist_remote.rs  cache.rs  cli.rs  coalescing.rs  config.rs  dispatcher.rs  dns.rs  hooks.rs  hosts_remote.rs  incoming.rs  lib.rs  main.rs  metrics_http.rs  proxy.rs  tls.rs  upstream.rs
src/admin/: dashboard.html  mod.rs
src/cache/: mod.rs
src/config/: mod.rs
src/libbalancedns/: Cargo.toml
src/libbalancedns/src/: balancedns_runtime.rs  cache.rs  conductor.rs  config.rs  dns.rs  lib.rs  lua_config.rs  lua_plugin.rs  net_helpers.rs  odoh.rs  plugins.rs  recursor.rs  remote_refresh.rs  resolver.rs  sandbox.rs  server.rs  tcp_acceptor.rs  udp_acceptor.rs  upstream_probe.rs  varz.rs  webservice.rs  worker.rs
src/metrics/: mod.rs
src/plugins/: mod.rs
src/protection/: mod.rs
src/resolver/: mod.rs
src/server/: mod.rs
tests/: blocklist_remote.rs  hosts_remote.rs  incoming_dot_doh.rs  proxy_mvp.rs  tests.rs
tools/: benchmark.rs
tools/odoh-client/: go.mod  go.sum  main.go
(+6 files in other folders)
