[package]
name = "astracat-dns-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
hickory-server = { version = "0.24", features = ["dns-over-https-rustls", "dns-over-tls"] }
hickory-proto = { version = "0.24", features = ["dns-over-https-rustls", "dns-over-tls"] }
hickory-resolver = { version = "0.24", features = ["dnssec-ring", "dns-over-https-rustls", "dns-over-tls"] }
rustls = "0.21"
rustls-pemfile = "1.0"
prometheus = "0.13"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"
base64 = "0.21"
lmdb-rkv = "0.14"
tempfile = "3.8"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
async-trait = "0.1"
thiserror = "1.0"
humantime-serde = "1.1.1"
sysinfo = "0.30.0"
dashmap = "6.1.0"
serde_json = "1.0.147"
lru = "0.16.2"
bincode = "1.3"
async-channel = "2.5.0"
moka = { version = "0.12", features = ["future", "sync"] }
governor = "0.6"
nonzero_ext = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
async_singleflight = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
