[package]
name = "balancedns"
version = "0.3.0"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"

[features]
clippy = ["libbalancedns/clippy"]

default = []

[dev-dependencies]
nix = "*"
regex = "*"
tempfile = "*"

[dependencies.libbalancedns]
path = "src/libbalancedns"

[dependencies]
clap = "*"
env_logger = "0.11"
log = "0.4"

[profile.release]
lto = "fat"
panic = "abort"
opt-level = 3
codegen-units = 1
strip = true
target-cpu = "native"

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
strip = false
