[package]
name = "libbalancedns"
version = "0.3.0"
authors = ["Frank Denis <github@pureftpd.org>"]
publish = false
edition = "2018"

[dependencies]
base64 = "*"
clippy = {version = "*", optional = true}
clockpro-cache = "0.1.12"
coarsetime = "0.1.10"
libloading = "0.8"
log = "0.4"
nix = "~0.8 "
parking_lot = "*"
privdrop = "=0.3.0"
prometheus = "*"
rand = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "http2"] }
rustls = "0.21"
rustls-pemfile = "1"
toml = "0.8"
url = "*"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
