[package]
name = "libbalancedns"
version = "0.3.0"
authors = ["Frank Denis <github@pureftpd.org>"]
publish = false
edition = "2018"

[dependencies]
base64 = "*"
caches = "0.3.0"
clippy = {version = "*", optional = true}
clockpro-cache = "0.1.12"
coarsetime = "0.1.10"
crossbeam-channel = "0.5"
hyper = { version = "0.14", default-features = false, features = ["http1", "http2", "server", "stream"] }
libloading = "0.8"
log = "0.4"
nix = "~0.8 "
parking_lot = "*"
privdrop = "=0.3.0"
prometheus = "*"
rand = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-native-roots", "http2"] }
rustls = "0.21"
rustls-pemfile = "1"
tokio = { version = "1", features = ["io-util", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = "0.24"
toml = "0.8"
url = "*"
wasmtime = "43.0.0"

[profile.release]
lto = "fat"
panic = "unwind"
opt-level = 3
codegen-units = 1
strip = true
target-cpu = "native"

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
strip = false
